--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.1",
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
-    "generate-key": "^0.0.6"
+    "generate-key": "^0.0.6",
+    "mongodb": "^4.4.0"
   }
 }
