--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "generate-key": "^0.0.6",
-    "mongodb": "^4.4.0"
+    "mongodb": "^4.4.0",
+    "nodemailer": "^6.7.2"
   }
 }
