--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "generate-key": "^0.0.6",
