--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "generate-key": "^0.0.6",
+    "generate-password": "^1.7.0",
     "mongodb": "^4.4.0",
     "nodemailer": "^6.7.2"
   }
